[package]
name = "crates_proxy"
version = "0.1.0"
edition = "2024"

[[example]]
name = "simple_curl_test"
path = "examples/simple_curl_test.rs"

[[example]]
name = "trace_redirects"
path = "examples/trace_redirects.rs"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
curl = "0.4"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
# log = "0.4"
# env_logger = "0.10"
rat_logger = { path = "../logger/rat_logger" }
url = "2.4"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
